Fixes image stretch issue on sponsor logo

--- a/Style/style.css
+++ b/Style/style.css
@@ -165,7 +165,7 @@ ul {
 
 .sponsors li img {
     width: 100px;
-    height: 100px;
+    max-height: 100px;
     margin-right: 15px;
 }
 
